# new-python-repository-template

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  pyrightconfig.json  pytest.ini  recommended-libs.md  ruff.toml  ty.toml  uv.toml
archive/: README.md
src/: main.py
